--- a/HTML and CSS project/style.css
+++ b/HTML and CSS project/style.css
@@ -75,7 +75,7 @@ nav {
   color: whitesmoke;
   border: 1px solid white;
   padding: 12px 34px;
-  font-size: 25px;
+  font-size: 15px;
   background: transparent;
   position: relative;
   cursor: pointer;
@@ -85,17 +85,6 @@ nav {
   transition: 1s;
   background: #f44336;
 }
-.close-icon,
-.menu-icon {
-  display: none;
-}
-#menu-toggle {
-  display: none;
-}
-.menu-icon {
-  display: none;
-}
-
 @media screen and (max-width: 700px) {
   .textbox h1 {
     font-size: 20px;
@@ -109,8 +98,8 @@ nav {
     height: 100vh;
     width: 200px;
     top: 0;
-    right: -200px;
-    text-align: left;
+    right: 0;
+    text-align: center;
     z-index: 2;
   }
   .close-icon,
@@ -125,15 +114,262 @@ nav {
     padding: 30px;
     /* text-align: center; */
   }
-  .close-icon,
-  .nav-links {
-    display: none;
+  .row {
+    flex-direction: column;
   }
-  #menu-toggle:checked ~ .menu-icon {
-    display: none;
+  .ctn h1 {
+    font-size: 24px;
   }
-  #menu-toggle:checked ~ .close-icon,
-  #menu-toggle:checked ~ .nav-links {
-    display: none;
+  .test-col img {
+    margin-left: 0;
+    margin-right: 15px;
   }
+  .sub-header h1 {
+    font-size: 18px;
+  }
+}
+/* ourse */
+.course,
+.facilities,
+.test {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+h1 {
+  font-size: 36px;
+  font-weight: 600;
+}
+p {
+  color: #c02727;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+.row {
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.course-col,
+.facilities-col {
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+}
+h3 {
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.course-col,
+.facilities-col:hover {
+  box-shadow: 0 0 20px 0px aqua;
+}
+.test-col {
+  flex-basis: 31%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left;
+  background: #fff3f3;
+  padding: 20px 12px;
+  cursor: pointer;
+  display: flex;
+  box-sizing: border-box;
+  margin: 20px;
+}
+.test-col img {
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-right: 30px;
+}
+.test-col p {
+  padding: 0;
+  /* text-align: center; */
+}
+.test-col h3 {
+  text-align: left;
+  margin-top: 15px;
+}
+.cta {
+  margin: 100px auto;
+  width: 80%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/contact.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
+}
+.cta h1 {
+  color: #fff;
+  margin-bottom: 40px;
+  padding: 0;
+}
+footer {
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
+}
+footer h4 {
+  margin-top: 20px;
+  margin-bottom: 25px;
+  font-weight: 600;
+}
+.icon .fa-brands {
+  color: #c02727;
+  margin: 0 13px;
+  cursor: pointer;
+  padding: 18px 0;
+}
+.fa-solid,
+.fa-regular {
+  color: violet;
+}
+.sub-header {
+  height: 50vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(./images/b.jpg);
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  color: white;
+}
+.sub-header h1 {
+  margin-top: 100px;
+}
+.about-us {
+  width: 80%;
+  margin: auto;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+.about-col {
+  flex-basis: 48%;
+  padding: 30px 2px;
+}
+.about-col img {
+  width: 100%;
+}
+.about-col h1 {
+  padding-top: 0;
+}
+.about-col p {
+  padding: 15px 0 25px;
+}
+.red {
+  border: 1px solid #f44336;
+  background: transparent;
+  color: blueviolet;
+}
+.blog-content {
+  width: 80%;
+  margin: auto;
+  padding: 60px 0;
+}
+.blog-left {
+  flex-basis: 65%;
+}
+.blog-left img {
+  width: 100%;
+}
+.blog-left h2 {
+  color: #222;
+  font-weight: 600;
+  margin: 30px 0;
+}
+.blog-left p {
+  color: #999;
+  padding: 0;
+  text-align: justify;
+}
+.blog-right {
+  flex-basis: 32%;
+}
+.blog-right h3 {
+  background: #f44336;
+  color: #fff;
+  padding: 7px 0;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.blog-right div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #555;
+  padding: 8px;
+  box-sizing: border-box;
+}
+.comment-box {
+  border: 1px solid #ccc;
+  margin: 50px 0;
+  padding: 10px 20px;
+}
+.comment-box h3 {
+  text-align: left;
+}
+.comment-form input,
+.comment-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 15px 0;
+  border: none;
+  outline: none;
+  background: #f0f0f0;
+}
+.comment-form button {
+  margin: 10px 0;
+}
+.location {
+  width: 80%;
+  margin: auto;
+  padding: 80px 0;
+}
+.location iframe {
+  width: 100%;
+}
+.contact-us {
+  width: 80%;
+  margin: auto;
+}
+.contact-col {
+  flex-basis: 48%;
+  margin-bottom: 30px;
+}
+.contact-col div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.contact-col div .fa-solid {
+  font-size: 28px;
+  color: #f44336;
+  margin: 10px;
+  margin-right: 30px;
+}
+.contact-col div p {
+  padding: 0;
+}
+.contact-col div h5 {
+  font-size: 20px;
+  margin-bottom: 5px;
+  color: #555;
+  font-weight: 600;
+}
+.contact-col input,
+.contact-col textarea {
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 17px;
+  outline: none;
+  border: 1px solid #ccc;
 }
