--- a/HTML and CSS project/style.css
+++ b/HTML and CSS project/style.css
@@ -1,4 +1,7 @@
 * {
+  box-sizing: border-box;
+}
+body {
   margin: 0;
   padding: 0;
 }
@@ -22,6 +25,8 @@ nav {
   padding: 2%, 6%;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
 }
 .nav-links {
   flex: 1;
@@ -161,15 +166,16 @@ p {
   margin-bottom: 5%;
   padding: 20px 12px;
   box-sizing: border-box;
+  transition: 300ms ease;
 }
 h3 {
   text-align: center;
   font-weight: 600;
   margin: 10px 0;
 }
-.course-col,
+.course-col:hover,
 .facilities-col:hover {
-  box-shadow: 0 0 20px 0px aqua;
+  box-shadow: 0 0 20px 0px grey;
 }
 .test-col {
   flex-basis: 31%;
