--- a/HTML and CSS project/style.css
+++ b/HTML and CSS project/style.css
@@ -100,12 +100,13 @@ nav {
   .nav-links {
     position: absolute;
     background: rgb(58, 61, 53);
-    height: 100vh;
-    width: 200px;
+    height: 30vh;
+    width: 150px;
     top: 0;
     right: 0;
     text-align: center;
     z-index: 2;
+    /* background: transparent; */
   }
   .close-icon,
   .menu-icon {
