--- a/Project1/style.css
+++ b/Project1/style.css
@@ -1,36 +1,44 @@
 * {
+  box-sizing: border-box;
+}
+body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  overflow-x: hidden;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
-
 /* Navigation Bar */
 #navbar {
+  width: 100%;
+  height: 100px;
+  top: 0;
+  position: fixed;
   display: flex;
   align-items: center;
-  position: relative;
-  text-align: right;
+  text-align: center;
+  z-index: 10;
 }
 #navbar::before {
   content: "";
-  background-color: black;
   position: absolute;
   height: 100%;
   width: 100%;
+  background-color: black;
   z-index: -1;
-  opacity: 0.3;
+  /* opacity: 0.9; */
   top: 0;
   left: 0;
 }
+
 .logo h1 {
   font-size: 2rem;
   margin: 5px 20px;
+  color: white;
 }
 #navbar ul {
   display: flex;
   justify-content: space-between;
-  padding-left: 400px;
+  padding-left: 200px;
 }
 
 #navbar ul li {
@@ -39,7 +47,7 @@
   font-size: 1.3rem;
 }
 #navbar ul li a {
-  color: rgba(21, 22, 22);
+  color: white;
   display: block;
   padding: 3px 22px;
   border-radius: 20px;
@@ -54,6 +62,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  margin-top: 100px;
   background-image: url(./images/bg1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -89,7 +98,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(116, 106, 106, 0.5);
+  background-color: rgba(41, 27, 27, 0.5);
 }
 .content {
   position: relative;
@@ -105,6 +114,7 @@
 .content h1 {
   font-size: 50px;
   margin-bottom: 0;
+  /* color: #000; */
 }
 .content p {
   font-size: 20px;
@@ -118,7 +128,8 @@
 }
 .services h1,
 .foods h1,
-.client h1 {
+.client h1,
+.testimonials h1 {
   font-size: 40px;
   text-align: center;
 }
@@ -231,4 +242,101 @@
 }
 .fa-brands {
   font-size: 50px;
+}
+.footer {
+  margin-top: 30px;
+  text-align: center;
+}
+.testimonials {
+  margin: 30px;
+}
+.test {
+  display: flex;
+  background-image: url(./images/testimonial.jpg);
+  /* height: 100px; */
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  /* opacity: 0.2; */
+}
+.rating {
+  color: black;
+  border: none;
+  text-align: center;
+  /* height: 150px; */
+  width: 150px;
+  justify-content: space-between;
+  margin: auto;
+}
+@media screen and (max-width: 700px) {
+  /* Styles for screens up to 700px */
+
+  /* Navigation Bar */
+  #navbar {
+    height: auto;
+    width: 100%;
+    /* flex-direction: row;
+    align-items: flex-start;
+    padding: 10px; */
+    display: block;
+  }
+  #navbar h1 {
+    font-size: 20px;
+  }
+  #navbar ul {
+    /* flex-direction: column; */
+    padding-left: 0;
+  }
+
+  #navbar ul li {
+    margin-bottom: 10px;
+    font-size: 10px;
+  }
+
+  /* Home Section */
+  .bgimage {
+    height: 60vh;
+  }
+
+  .content h1,
+  .services h1,
+  .client h1,
+  .foods h1 {
+    font-size: 30px;
+  }
+
+  .content p {
+    font-size: 16px;
+    width: 80%;
+  }
+  .heading {
+    font-size: 60px;
+  }
+  /* Services */
+  .box {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+
+  /* Foods Available */
+  .photos {
+    width: 150px;
+    height: 150px;
+  }
+
+  .photos span img {
+    width: 150px;
+    height: 150px;
+  }
+
+  /* Client */
+  .client-item {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .client-item div {
+    margin: 10px;
+  }
 }
